prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,10 @@ h1, h2, h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
-html {
+html,body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 
